[tool.poetry]
name = "controle-de-validade"
version = "0.1.0"
description = ""
authors = ["LuizEduardo-service <luizeduardo.service@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
